# wince-backend

./: .gitignore  .prettierrc  AGENTS.md  ANALYSIS_DECISION_ENGINE.md  Cargo.toml  docker-compose.yml  eslint.config.mjs  implementation_plan.md  jest.preset.js  kong.yml  nx.json  package.json  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
.agents/skills/caveman-compress/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
.github/agents/: Plan2.agent copy.md  Plan2.agent.md  code-compare.agent.md  doc-gen.agent.md
.github/skills/caveman/: SKILL.md
.github/workflows/: ci.yml
apps/admin-api/: Dockerfile  package.json  project.json  tsconfig.app.json  tsconfig.spec.json  tsconfig.spec.tsbuildinfo  vite.config.mts
apps/admin-api/src/: config.ts  health.ts  index.ts  types.ts
apps/admin-api/src/clients/: decision-engine.ts  kong.ts
apps/admin-api/src/middleware/: auth.ts  reject-identity.ts  roles.ts  store-scope.spec.ts  store-scope.ts  token-version.spec.ts  token-version.ts
apps/admin-api/src/routes/: analytics.ts  auth.spec.ts  auth.ts  discount.spec.ts  discount.ts  experiments.ts  intervention.ts  policies.ts  risk.ts  stores.ts
apps/admin-api/src/services/: audit.ts  recommendation.ts
apps/analytics-consumer/: Dockerfile  jest.config.cts  package.json  tsconfig.app.json
apps/analytics-consumer-e2e/: jest.config.cts  package.json  tsconfig.json
apps/analytics-consumer-e2e/src/analytics-consumer/: analytics-consumer.spec.ts
apps/analytics-consumer/src/: batcher.ts  config.ts  consumer.ts  health.ts  intervention-events.ts  main.ts  metrics.ts  types.ts
apps/decision-engine/: package.json  tsconfig.app.json  tsconfig.spec.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/decision-engine/src/: config.ts  health.ts  main.ts  metrics.ts
apps/decision-engine/src/budget/: budget.service.ts
apps/decision-engine/src/cooldown/: cooldown.service.ts
apps/decision-engine/src/discount/: discount.service.ts
apps/decision-engine/src/experiment/: experiment.service.ts
apps/decision-engine/src/features/: features.service.ts
apps/decision-engine/src/inference/: inference.service.ts
apps/decision-engine/src/internal/: internal-handler.ts
apps/decision-engine/src/intervention/: intervention.service.ts  intervention.writer.ts
apps/decision-engine/src/kafka/: decision.consumer.ts
apps/decision-engine/src/lock/: lock.service.ts
apps/decision-engine/src/outbound/: outbound.service.ts
apps/decision-engine/src/policy/: policy.service.ts
apps/decision-engine/src/risk/: risk-scorer.service.ts  risk-scorer.spec.ts
apps/decision-engine/src/rules/: rules.service.ts
apps/decision-engine/src/scheduler/: scheduler.service.ts  scheduler.worker.ts
apps/decision-engine/src/services/: budget.service.ts  cooldown.service.ts  discount.service.ts  features.service.ts  index.ts  inference.service.ts  intervention.service.ts  lock.service.ts  lock.spec.ts  policy.service.ts  prediction.service.ts  recommendation.service.ts  risk-scorer.service.ts  risk-scorer.spec.ts  rules.service.ts  rules.spec.ts  scheduler.spec.ts  session-features.service.ts  stale-scanner.service.ts
apps/decision-engine/src/stale-scanner/: stale-scanner.service.ts
apps/decision-engine/src/trigger/: trigger.handler.ts
apps/enrichment-session/: Cargo.toml  Dockerfile  Dockerfile.dev  jest.config.cts  package.json  project.json  tsconfig.app.json
apps/enrichment-session-e2e/: jest.config.cts  package.json  tsconfig.json
apps/enrichment-session-e2e/src/enrichment-session/: enrichment-session.spec.ts
apps/enrichment-session/src/: config.rs  config.ts  consumer.rs  consumer.ts  customer.rs  customer.ts  enricher.rs  enricher.ts  health.rs  idempotency.rs  main.rs  main.ts  metrics.rs  metrics.ts  session.rs  session.ts  trigger_forwarder.rs  types.rs  types.ts
apps/enrichment-session_v1/src/: config.ts  consumer.ts  customer.ts  health.ts  idempotency.ts  session.ts  trigger-forwarder.ts
apps/frontend/: eslint.config.mjs  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.spec.json  vite.config.mts
apps/frontend-e2e/: package.json  playwright.config.ts
apps/frontend/src/: App.tsx  main.tsx  routeTree.gen.ts  routesold.tsx.old  styles.css
apps/frontend/src/app/: App.tsx  routes.tsx
apps/frontend/src/appv1/: App.tsx  routes.tsx
apps/frontend/src/assets/: logo.tsx
apps/frontend/src/hooks/: useDataStore.ts  (+1 more)
apps/ingestion/: Cargo.toml  Dockerfile  Dockerfile.dev  project.json
apps/ingestion/src/: body.rs  config.rs  decompression.rs  errors.rs  handler.rs  health.rs  kafka.rs  main.rs  metrics.rs  pipeline.rs  pipeline_test.rs  quota_limiter.rs  rate_limiter.rs  response.rs  restrictions.rs
apps/ingestion/src/sinks/: fallback.rs  kafka.rs  mod.rs  s3.rs  wal.rs
apps/intervention-gateway/: package.json  tsconfig.app.json
apps/intervention-gateway/src/: config.ts  main.ts  metrics.ts  poll-handler.ts  push-handler.ts  server.ts
apps/notification-service/: package.json  tsconfig.app.json
apps/notification-service/src/: config.ts  health.ts  main.ts  metrics.ts
docs/: ARCHITECTURE.md  DB.md  Ingestion Service Comparison Report.md  PlanOfAction.md  analytic consumer.md  authentication-flows.md  db-comparison-report.md  docker.md
docs/domains/: README.md  analytics-and-ops.md  data-stores.md  observability-deployment.md  prediction and intervention.md  revenue-attribution-ab-testing.md  security.md  tracking-model.md
docs/services/: Analytics Consumer.md  README.md  admin-api.md  api-gateway.md  api-key-service.md  decision + intervention service v3.md  decision-engine-detailed.md  decision-engine-optmization.md  decision-engine-optmization_v2.md  decision-engine.md  enrichment service v2.md  enrichment-session-service-detailed.md  enrichment-session-service.md  ingestion-service-detailed.md  ingestion-service.md  intervention-gateway.md  notification-service.md  ops-and-compliance.md
scripts/: generate-dummy-onnx.py
vite/: index.d.ts  index.js  vite.config.library.base.js  vitest.config.library.base.js
(+263 files in other folders)
