[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ingestion"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
rdkafka = { version = "0.36" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
envconfig = "0.10"
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tokio-test = "0.4"
