[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ingestion"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
rdkafka = { version = "0.36" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }
envconfig = "0.10"
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Phase 1 — Observability
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
# Phase 3 — Rate limiting + Phase 5 — Overflow
governor = { version = "0.6", features = ["dashmap"] }
# Phase 6 — S3 fallback sink
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
anyhow = "1"
# Phase 6 — Sink trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
